# pynix

./: .cmake-format.py  .sparse-export  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.rst  apt-requirements-bionic.txt  pip-requirements.txt
build_tooling/: lint-excludes.txt
build_tooling/cmake/tangent/: pkgconfig.cmake  wrappers.cmake
pynix/: CMakeLists.txt  __init__.py  __main__.py  chroot.c  clone_constants.h  docstr.c  docstr.h  epoll.c  gettid.c  include_first.h  inotify.c  mount.c  prctl.c  prctl_constants.h  pynix.c  resid.c  signalfd.c  sigprocmask.c  sigset.c  tests.py  unshare.c
pynix/codegen/: constants.h.in  docstr.c.in  docstr.h.in  gen_constants.py  gen_docstr.py
pynix/doc/: .readthedocs.yml  CMakeLists.txt  README.rst  changelog.rst  conf.py  impl_list.rst  index.rst  installation.rst  modules.rst  release_notes.rst  rtd-requirements.txt.in
pynix/doc/bits/: badges.rst  impl_list.rst
pynix/docstr/: docdb.rst  docdb_gen.py
pynix/pypi/: setup.py
tangent/: CMakeLists.txt
tangent/tooling/: gen_rtd_requirements.py  github.py
tangent/tooling/deploy_keys/: pynix-rtd.deploy_key.enc
